Add Plantin Mt Pro Font Set
Added the Plantin MT Pro Font set.
Regular, Regular Italic, Bold, Semi Bold Italic.

--- a/css/style-9.css
+++ b/css/style-9.css
@@ -171,6 +171,22 @@
 	font-family: notosans;
 	src: url('../fonts/NotoSans-Regular.ttf') format('truetype');
 }
+@font-face {
+	font-family: plantinmtprobold;
+	src: url('../fonts/PlantinMTProBold.woff2') format("woff2");
+}
+@font-face {
+	font-family: plantinmtprorg;
+	src: url('../fonts/PlantinMTProRg.woff2') format("woff2");
+}
+@font-face {
+	font-family: plantinmtprorgit;
+	src: url('../fonts/PlantinMTProRgIt.woff2') format("woff2");
+}
+@font-face {
+	font-family: plantinmtprosemiboldit;
+	src: url('../fonts/PlantinMTProSemiBdIt.woff2') format("woff2");
+}
 /*Variables*/
 :root {
 	--site-background: url('../img/lowpolyBackground.svg');
