Add Top and Bottom Masks
Adds Top and Bottom masks for all frames in the more options drop down.

--- a/css/style-9.css
+++ b/css/style-9.css
@@ -971,3 +971,9 @@ textarea.input {
 	grid-gap: 0.5rem;
 	padding: 1rem 2rem;
 }
+#addToTopHalf {
+  grid-row: 2;
+}
+#addToBottomHalf {
+  grid-row: 2;
+}
