Adds Borderless Stellar Sights
Adds the Borderless Stellar Sights to Showcase frames and adds the margins to the secondary margin drop down. Also adds the font for the Title text of the frame.

--- a/css/style-9.css
+++ b/css/style-9.css
@@ -188,8 +188,8 @@
 	src: url('../fonts/PlantinMTProRgIt.woff2') format("woff2");
 }
 @font-face {
-	font-family: plantinmtprosemiboldit;
-	src: url('../fonts/PlantinMTProSemiBdIt.woff2') format("woff2");
+	font-family: fomalhaut;
+	src: url('../fonts/Magic-Fomalhaut.woff2') format("woff2");
 }
 /*Variables*/
 :root {
