Initial version of "Burning Revelation" modified Secret Lair frame

--- a/css/style-9.css
+++ b/css/style-9.css
@@ -195,6 +195,10 @@
 	font-family: fomalhaut;
 	src: url('../fonts/Magic-Fomalhaut.woff2') format("woff2");
 }
+@font-face {
+	font-family: thunderman;
+	src: url('../fonts/Thunderman.ttf') format("truetype");
+}
 /*Variables*/
 :root {
 	--site-background: url('../img/lowpolyBackground.svg');
